Hide reCAPTCHA badge

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -102,3 +102,7 @@ form {
 .transition-fade {
     @apply transition ease-in-out duration-700;
 }
+
+.grecaptcha-badge {
+    visibility: hidden;
+}
