--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,9 @@
+@import "./typography.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    font-family: "Inter", sans-serif;
+}
